# EDNL_UCA_PRACTICAS

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  main  main.cpp
ABB/: Abb.hpp  Conjunto.hpp
ABIN/: Abin.hpp  abin_E-S.h
ABIN/Practicas/P1/Ej1/: Ejercicio1.hpp
ABIN/Practicas/P1/Ej2/: Ejercicio2.hpp
ABIN/Practicas/P1/Ej3/: Ejercicio3.hpp
ABIN/Practicas/P1/Ej6/: Ejercicio6.hpp
ABIN/Practicas/P1/Ej7/: Ejercicio7.hpp
ABIN/Practicas/P2/Ej1/: Ejercicio1.hpp
ABIN/Practicas/P2/Ej2/: Ejercicio2.hpp
ABIN/Practicas/P2/Ej3/: Ejercicio3.cpp  Ejercicio3.hpp
ABIN/Practicas/P2/Ej4/: Ejercicio4.hpp
AGEN/: Agen.hpp  agen_E-S.h
AGEN/Practicas/P3/Ej1/: Ejercicio1.hpp
AGEN/Practicas/P3/Ej2/: Ejercicio2.hpp
AGEN/Practicas/P3/Ej3/: Ejercicio3.hpp
AGEN/Practicas/P3/Ej4/: Ejercicio4.cpp  Ejercicio4.hpp
APO/: Apo_min_max.hpp  apo.hpp
APO/Practicas/P5/Ej1/: Ejercicio1.cpp  Ejercicio1.hpp
GRAFOS/Contenido/: alg_grafoMA.cpp  alg_grafoMA.h  alg_grafoPMC.h  alg_grafo_E-S.cpp  alg_grafo_E-S.h  apo.h  colaenla.h  grafoLA.cpp  grafoLA.h  grafoMA.cpp  grafoPLA.h  grafoPMC.h  listaenla.h  matriz.h  particion.cpp  pilaenla.h
GRAFOS/Ejercicio_final_masoquismo/: Grecoland.cpp  Grecoland.hpp
GRAFOS/Laberinto/: Laberinto.cpp  Laberinto.hpp
GRAFOS/Practicas/P6/Ej2/: Ejercicio2.hpp
